// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager Test error notification with top-left position 1`] = `
<div
  class="vuedl-notification left vuedl-notification-fade-enter vuedl-notification-fade-enter-active"
  role="alert"
  style="max-width: 330px; z-index: 2000; top: 10px;"
>
  <div
    class="v-alert error"
    style="margin: 0px; min-width: 300px;"
  >
    <i
      aria-hidden="true"
      class="v-icon material-icons theme--light v-alert__icon"
    >
      warning
    </i>
    <div>
      
  Test notification
  
      <span />
    </div>
    <a
      class="v-alert__dismissible"
    >
      <i
        aria-hidden="true"
        class="v-icon v-icon--right material-icons theme--light"
      >
        cancel
      </i>
    </a>
  </div>
   
  <!---->
</div>
`;

exports[`manager Test success notification 1`] = `
<div
  class="vuedl-notification right vuedl-notification-fade-enter vuedl-notification-fade-enter-active"
  role="alert"
  style="max-width: 330px; z-index: 2000; top: 10px;"
>
  <div
    class="v-alert success"
    style="margin: 0px; min-width: 300px;"
  >
    <i
      aria-hidden="true"
      class="v-icon material-icons theme--light v-alert__icon"
    >
      check_circle
    </i>
    <div>
      
  Test notification
  
      <span />
    </div>
    <a
      class="v-alert__dismissible"
    >
      <i
        aria-hidden="true"
        class="v-icon v-icon--right material-icons theme--light"
      >
        cancel
      </i>
    </a>
  </div>
   
  <!---->
</div>
`;

exports[`manager Test warning notification with bottom-right position 1`] = `
<div
  class="vuedl-notification right"
  role="alert"
  style="max-width: 330px; z-index: 2000; bottom: 10px;"
>
  <div
    class="v-alert warning"
    style="margin: 0px; min-width: 300px;"
  >
    <i
      aria-hidden="true"
      class="v-icon material-icons theme--light v-alert__icon"
    >
      priority_high
    </i>
    <div>
      
  Test notification
  
      <span />
    </div>
    <a
      class="v-alert__dismissible"
    >
      <i
        aria-hidden="true"
        class="v-icon v-icon--right material-icons theme--light"
      >
        cancel
      </i>
    </a>
  </div>
   
  <!---->
</div>
`;
